# workshop-solutions

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: daily.yml  main.yml
cli/: text_to_speech.py
prompt/: shakespeare.py  summary.py  translation.py
src/: prompt_helper.py  sentiment.py  shakespearean.py  summarize.py  transcribe.py  translation.py
tests/: conftest.py  test_e2e.py  test_security.py  test_sentiment.py  test_shakespeare.py  test_summarize.py  test_transcribe.py  test_translation.py
